[gd_scene load_steps=3 format=3 uid="uid://b6ygsi1ytv6r0"]

[ext_resource type="Script" uid="uid://53tic02uem0w" path="res://player_id_dialog.gd" id="1_7tuyq"]
[ext_resource type="FontFile" uid="uid://wqrno8lackrm" path="res://gui/kenney_mini_square.ttf" id="1_8kwcx"]

[node name="PlayerIdDialog" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7tuyq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7607843)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ColorRect/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -20.0
offset_right = 57.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8kwcx")
theme_override_font_sizes/font_size = 48
text = "Enter Group Id"

[node name="LineEdit" type="LineEdit" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8kwcx")
theme_override_font_sizes/font_size = 32
placeholder_text = "Group Id"
alignment = 1

[node name="ErrorLabel" type="Label" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.33333334, 0.33333334, 1)
theme_override_fonts/font = ExtResource("1_8kwcx")
theme_override_font_sizes/font_size = 32
text = "ERROR"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8kwcx")
theme_override_font_sizes/font_size = 32
text = "Start"
